# imdb-reviews-sentiment-classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: data.yaml
configs/logging/: logging.yaml
configs/model/: baseline.yaml  bert.yaml
configs/train/: train.yaml
reviews_classifier/: commands.py  data.py  module.py  utils.py
reviews_classifier/scripts/: download_data_from_s3.py  preprocess_data.py
reviews_classifier/scripts/train/: __init__.py  baseline.py  bert.py
